enable preview in maven-surefire-plugin